Align frontend and backend implementations with the Admin API Spec. (#50)